--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="ff_til_place_holder_text">Enter a word to translate</string>
     <string name="ff_til_helper_text">maximum word length</string>
     <string name="ff_til_hint_text">Translator</string>
-    <string name="ff_til_hint_text_is_null_or_empty">Empty text field</string>
+    <string name="ff_til_error_tiet_is_empty">Empty text field</string>
+    <string name="ff_til_error_incorrect_input">Incorrect input</string>
 </resources>
