--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">GB_PProg</string>
+    <string name="app_name">Translator</string>
     <string name="ff_til_place_holder_text">Enter a word to translate</string>
     <string name="ff_til_helper_text">maximum word length</string>
     <string name="ff_til_hint_text">Translator</string>
