--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="ff_til_hint_text">Translator</string>
     <string name="ff_til_error_tiet_is_empty">Empty text field</string>
     <string name="ff_til_error_incorrect_input">Incorrect input</string>
+    <string name="ff_item_tv_translate_text">%s - %s</string>
 </resources>
