--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="bottom_view_icon_timer_title">timer</string>
     <string name="bottom_view_icon_translator_title">translator</string>
     <string name="bottom_view_icon_favorites_title">favorites</string>
+    <string name="email_validator">email validator</string>
 </resources>
